[package]
name = "azure-liminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
filetime = "0.2"
reqwest = { version = "0.11", features = ["default", "stream"] }
once_cell = "1.17"
nix = "0.26"
qapi = { version = "0.13", features = [ "qmp", "qga", "async-tokio-all" ] }


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"


